<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.tensorflow.demo.SetupPgFourActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        app:srcCompat="@drawable/ic_speech_to_text" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageButton6"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/setup_pg4_title"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageButton6"
        android:layout_alignStart="@+id/imageButton3"
        android:layout_below="@+id/imageView"
        android:text="@string/setup_pg4_description"
        android:textAlignment="center" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"
        android:background="@android:color/transparent"
        android:onClick="gotoPrev"
        app:srcCompat="@drawable/ic_prev" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView2"
        android:layout_alignTop="@+id/imageButton3"
        android:background="@android:color/transparent"
        android:onClick="gotoNext"
        app:srcCompat="@drawable/ic_next" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:background="@android:color/transparent"
        android:onClick="gotoSkip"
        app:srcCompat="@drawable/ic_skip" />

    <Space
        android:id="@+id/space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp" />

    <RadioGroup
        android:id="@+id/list_set_stt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView2"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:checkedButton="@string/pref_default_set_stt"
        android:paddingLeft="10dp">

        <RadioButton
            android:id="@string/pref_title_set_stt_list_values_0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pref_title_set_stt_list_titles_0" />

        <RadioButton
            android:id="@string/pref_title_set_stt_list_values_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pref_title_set_stt_list_titles_1" />

        <RadioButton
            android:id="@string/pref_title_set_stt_list_values_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pref_title_set_stt_list_titles_2" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignTop="@+id/space"
        android:padding="10dp"
        android:text="@string/pref_title_set_stt"
        android:textColor="@android:color/black" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageButton3"
        android:layout_alignEnd="@+id/imageView"
        android:layout_alignStart="@+id/imageView"
        android:layout_alignTop="@+id/imageButton3"
        app:srcCompat="@drawable/sc_pg4" />

</RelativeLayout>