<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.tensorflow.demo.AboutActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="25dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/pref_about_title"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:focusable="auto"
        android:onClick="openHome"
        app:srcCompat="@drawable/ic_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:paddingTop="10dp"
        android:text="@string/pref_about_createdby_title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/textView"
        android:gravity="center"
        android:text="@string/pref_about_author" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:onClick="getChangelog"
        android:paddingTop="10dp"
        android:text="@string/pref_about_version_title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView3"
        android:gravity="center"
        android:onClick="getChangelog"
        android:paddingBottom="10dp"
        android:text="@string/pref_about_version" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView8"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:onClick="getLicense"
        android:text="@string/pref_about_license_title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView9"
        android:gravity="center"
        android:onClick="getLicense"
        android:text="@string/pref_about_license_title2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView10"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:onClick="getLicense"
        android:text="@string/license"
        android:textAlignment="center"
        android:textSize="10sp"
        android:textStyle="italic" />

</RelativeLayout>
