<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.tensorflow.demo.SetupPgTwoActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        app:srcCompat="@drawable/ic_color_detect" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageButton6"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/setup_pg2_title"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageButton6"
        android:layout_alignStart="@+id/imageButton3"
        android:layout_below="@+id/imageView"
        android:text="@string/setup_pg2_description"
        android:textAlignment="center" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"
        android:background="@android:color/transparent"
        android:onClick="gotoPrev"
        app:srcCompat="@drawable/ic_prev" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView2"
        android:layout_alignTop="@+id/imageButton3"
        android:background="@android:color/transparent"
        android:onClick="gotoNext"
        app:srcCompat="@drawable/ic_next" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:background="@android:color/transparent"
        android:onClick="gotoSkip"
        app:srcCompat="@drawable/ic_skip" />

    <Space
        android:id="@+id/space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp" />

    <Switch
        android:id="@+id/switch_set_filt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignTop="@+id/space"
        android:padding="10dp"
        android:text="@string/pref_title_set_filt" />

    <Switch
        android:id="@+id/switch_set_cols"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/switch_set_filt"
        android:layout_alignStart="@+id/switch_set_filt"
        android:layout_below="@+id/switch_set_filt"
        android:padding="10dp"
        android:text="@string/pref_title_set_cols" />

    <EditText
        android:id="@+id/text_ROIsize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/labelTextView"
        android:layout_alignBottom="@+id/labelTextView"
        android:layout_alignEnd="@+id/textView2"
        android:layout_gravity="center_vertical"
        android:layout_toEndOf="@+id/space"
        android:gravity="right"
        android:singleLine="true"
        android:hint="@string/pref_default_ROIsize"
        android:digits="0123456789"
        android:inputType="number"
        android:textSize="14sp"
        android:maxLines="1" />

    <TextView
        android:id="@+id/labelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/switch_set_cols"
        android:layout_below="@+id/switch_set_cols"
        android:layout_toStartOf="@+id/space"
        android:gravity="left"
        android:maxLines="1"
        android:padding="10dp"
        android:text="@string/pref_title_ROIsize"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageButton5"
        android:layout_alignEnd="@+id/imageView"
        android:layout_alignStart="@+id/imageView"
        android:layout_alignTop="@+id/imageButton3"
        app:srcCompat="@drawable/sc_pg2" />

</RelativeLayout>
